--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <title>A & D Solutions</title>
+</head>
+
+<body>
+    <header class="container-header">
+        <nav class="container-header__nav">
+            <img src="/assets/LOGO.png" alt="logo" class="container-header__logo-icon">
+            <p class="container-header__name">A & D Solutions</p>
+            <img src="/assets/menu.png" id="menu-icon" alt="menu-mobile" class="container-header__menu-icon">
+            <ul class="container-header__nav-menu">
+                <li class="active">
+                    <a href="#">Inicio</a>
+                </li>
+                <li>
+                    <a href="#">Nosotros</a>
+                </li>
+                <li>
+                    <a href="#">Soluciones</a>
+                </li>
+                <li>
+                    <a href="#">Servicios</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Slider main container -->
+    <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+                <img src="/assets/img1.jpg" alt="notebook" />
+                <div class="carousel-text">
+                    <h1>Los mejores precios del mercado.</h1>
+                    <p>Atendemos tus requerimientos ajustándonos a tu presupuesto.</p>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <img src="/assets/img2.jpg" alt="Escritorio con accesorios y código" />
+                <div class="carousel-text">
+                    <h1>Desarrollo de alta calidad.</h1>
+                    <p> Contamos con el mejor equipo de desarrolladores.</p>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <img src="/assets/img3.jpg" alt="Mujer tecleando notebook" />
+                <div class="carousel-text">
+                    <h1>Implementación y Monitoreo.</h1>
+                    <p>Una de las mejores soluciones corporativas.</p>
+                </div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+        <section class="container-sectionOne">
+            <div>
+                <h2 class="container-sectionOne--title">Agregamos valor con servicios y soluciones que potencian el funcionamiento y la calidad de las
+                    aplicaciones.</h2>
+                <p>Nuestras líneas de negocio evidencian la experticia que tenemos como equipo de profesionales y
+                    técnicos
+                    especializados en las tecnologías más avanzadas para el desarrollo de servicios y soluciones a la
+                    medida
+                    de cada cliente.</p>
+            </div>
+        </section>
+        <section class="container container-sectionTwo">
+            <div class="container-sectionTwo__services">
+                <div class="container-sectionTwo__description">
+                    <div class="container-sectionTwo__img-col">
+                        <img src="/assets/cloud-data.png" alt="Cloud y DevOps">
+                    </div>
+                    <h3 class="container-sectionTwo__description--title">Cloud & DevOps</h3>
+                    <p class="container-sectionTwo__description--paragrah">En A & D Solutions hacemos que la
+                        adopción de Cloud y DevOps sea
+                        rápida, segura y simple.</p>
+                </div>
+                <div class="container-sectionTwo__description">
+                    <div class="container-sectionTwo__img-col">
+                        <img src="/assets/software-development.png" alt="Desarrollo de software">
+                    </div>
+                    <h3 class="container-sectionTwo__description--title">Desarrollo de software</h3>
+                    <p class="container-sectionTwo__description--paragrah">Construimos aplicaciones totalmente escalables basados en las nuevas tecnologías y mejores
+                        prácticas.</p>
+                </div>
+                <div class="container-sectionTwo__description">
+                    <div class="container-sectionTwo__img-col">
+                        <img src="/assets/protection.png" alt="Calidad de software">
+                    </div>
+                    <h3 class="container-sectionTwo__description--title">Calidad de software</h3>
+                    <p class="container-sectionTwo__description--paragrah">Analizamos el gran panorama
+                        para lograr una mejor experiencia
+                        en el desarrollo de tus aplicaciones.</p>
+                </div>
+                <div class="container-sectionTwo__description">
+                    <div class="container-sectionTwo__img-col">
+                        <img src="/assets/computer.png" alt="Capacitaciones">
+                    </div>
+                    <h3 class="container-sectionTwo__description--title">Capacitaciones</h3>
+                    <p class="container-sectionTwo__description--paragrah">Programa de formación adaptado
+                        a las necesidades de tu empresa, enfocado en Cloud.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div>
+                <p class="footer__text">2022 © A & D Solutions. Todos los derechos reservados.</p>
+            </div>
+        </footer>
+        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+        <script src="app.js"></script>
+</body>
+
+</html>
