fixing route img cloud

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="container-sectionTwo__services">
                 <div class="container-sectionTwo__description">
                     <div class="container-sectionTwo__img-col">
-                        <img src="/assets/cloud-data.png" alt="Cloud y DevOps">
+                        <img src="/assets/img/cloud-data.png" alt="Cloud y DevOps">
                     </div>
                     <h3 class="container-sectionTwo__description--title">Cloud & DevOps</h3>
                     <p class="container-sectionTwo__description--paragrah">En A & D Solutions hacemos que la
