--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <img src="/assets/img/img2.jpg" alt="Escritorio con accesorios y código" />
+                <img src="./assets/img/img2.jpg" alt="Escritorio con accesorios y código" />
                 <div class="carousel-text">
                     <h1>Desarrollo de alta calidad.</h1>
                     <p> Contamos con el mejor equipo de desarrolladores.</p>
                 </div>
             </div>
             <div class="swiper-slide">
-                <img src="/assets/img/img3.jpg" alt="Mujer tecleando notebook" />
+                <img src="./assets/img/img3.jpg" alt="Mujer tecleando notebook" />
                 <div class="carousel-text">
                     <h1>Implementación y Monitoreo.</h1>
                     <p>Una de las mejores soluciones corporativas.</p>
@@ -81,7 +81,7 @@
             <div class="container-sectionTwo__services">
                 <div class="container-sectionTwo__description">
                     <div class="container-sectionTwo__img-col">
-                        <img src="/assets/img/cloud-data.png" alt="Cloud y DevOps">
+                        <img src="./assets/img/cloud-data.png" alt="Cloud y DevOps">
                     </div>
                     <h3 class="container-sectionTwo__description--title">Cloud & DevOps</h3>
                     <p class="container-sectionTwo__description--paragrah">En A & D Solutions hacemos que la
@@ -98,7 +98,7 @@
                 </div>
                 <div class="container-sectionTwo__description">
                     <div class="container-sectionTwo__img-col">
-                        <img src="/assets/img/protection.png" alt="Calidad de software">
+                        <img src="./assets/img/protection.png" alt="Calidad de software">
                     </div>
                     <h3 class="container-sectionTwo__description--title">Calidad de software</h3>
                     <p class="container-sectionTwo__description--paragrah">Analizamos el gran panorama
@@ -107,7 +107,7 @@
                 </div>
                 <div class="container-sectionTwo__description">
                     <div class="container-sectionTwo__img-col">
-                        <img src="/assets/img/computer.png" alt="Capacitaciones">
+                        <img src="./assets/img/computer.png" alt="Capacitaciones">
                     </div>
                     <h3 class="container-sectionTwo__description--title">Capacitaciones</h3>
                     <p class="container-sectionTwo__description--paragrah">Programa de formación adaptado
