agregando ruta a imagenes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <header class="container-header">
         <nav class="container-header__nav">
-            <img src="/assets/img/LOGO.png" alt="logo" class="container-header__logo-icon">
+            <img src="./assets/img/LOGO.png" alt="logo" class="container-header__logo-icon">
             <p class="container-header__name">A & D Solutions</p>
-            <img src="/assets/img/menu.png" id="menu-icon" alt="menu-mobile" class="container-header__menu-icon">
+            <img src="./assets/img/menu.png" id="menu-icon" alt="menu-mobile" class="container-header__menu-icon">
             <ul class="container-header__nav-menu">
                 <li class="active">
                     <a href="#">Inicio</a>
@@ -40,7 +40,7 @@
         <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-                <img src="/assets/img/img1.jpg" alt="notebook" />
+                <img src="./assets/img/img1.jpg" alt="notebook" />
                 <div class="carousel-text">
                     <h1>Los mejores precios del mercado.</h1>
                     <p>Atendemos tus requerimientos ajustándonos a tu presupuesto.</p>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="container-sectionTwo__description">
                     <div class="container-sectionTwo__img-col">
-                        <img src="/assets/img/software-development.png" alt="Desarrollo de software">
+                        <img src="./assets/img/software-development.png" alt="Desarrollo de software">
                     </div>
                     <h3 class="container-sectionTwo__description--title">Desarrollo de software</h3>
                     <p class="container-sectionTwo__description--paragrah">Construimos aplicaciones totalmente escalables basados en las nuevas tecnologías y mejores
